crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__attribute__invalid_member.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/attribute/invalid_member.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..16,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..3,
                    value: Attribute(
                        ExprAttribute {
                            node_index: NodeIndex(None),
                            range: 0..3,
                            value: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 0..1,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            attr: Identifier {
                                id: Name("1"),
                                range: 1..3,
                                node_index: NodeIndex(None),
                            },
                            ctx: Load,
                            optional: false,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 4..9,
                    value: Attribute(
                        ExprAttribute {
                            node_index: NodeIndex(None),
                            range: 4..9,
                            value: Attribute(
                                ExprAttribute {
                                    node_index: NodeIndex(None),
                                    range: 4..7,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 4..5,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name("1"),
                                        range: 5..7,
                                        node_index: NodeIndex(None),
                                    },
                                    ctx: Load,
                                    optional: false,
                                },
                            ),
                            attr: Identifier {
                                id: Name("0"),
                                range: 7..9,
                                node_index: NodeIndex(None),
                            },
                            ctx: Load,
                            optional: false,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 10..15,
                    value: Subscript(
                        ExprSubscript {
                            node_index: NodeIndex(None),
                            range: 10..15,
                            value: Attribute(
                                ExprAttribute {
                                    node_index: NodeIndex(None),
                                    range: 10..12,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 10..11,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    attr: Identifier {
                                        id: Name(""),
                                        range: 12..12,
                                        node_index: NodeIndex(None),
                                    },
                                    ctx: Load,
                                    optional: false,
                                },
                            ),
                            slice: NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 13..14,
                                    value: Int(
                                        0,
                                    ),
                                },
                            ),
                            ctx: Load,
                            is_typeof: false,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x.1
  |  ^^ Syntax Error: tuple-member access `expr.N` is not valid in .py files
2 | x.1.0
3 | x.[0]
  |


  |
1 | x.1
2 | x.1.0
  |  ^^ Syntax Error: tuple-member access `expr.N` is not valid in .py files
3 | x.[0]
  |


  |
1 | x.1
2 | x.1.0
  |    ^^ Syntax Error: tuple-member access `expr.N` is not valid in .py files
3 | x.[0]
  |


  |
1 | x.1
2 | x.1.0
3 | x.[0]
  |   ^ Syntax Error: Expected an identifier
  |
